[project]
name = "api"
version = "0.1.0"
description = "Backend for a lightweight Meltano Projects webapp"
authors = [{name="Cody J. Hanson", email="cody@codyjhanson.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.95.1",
    "uvicorn[standard]>=0.21.1",
    "tinydb>=4.7.1",
    "eval-type-backport; python_version<'3.9'",
]

[tool.uv]
dev-dependencies = [
    "python-lsp-server>=1.7.2",
    "black>=23.3.0",
    "ruff>=0.0.269",
    "pytest>=7.3.1"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
